# boreal-welcome

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  welcome.cpp
src/qml/: boreal-welcome.qml
src/qml/pages/: DateTimePage.qml  SelectLanguagePage.qml  WelcomePage.qml
